[tool.poetry]
name = "calculators"
version = "0.1.0"
description = ""
authors = ["Rob M <rob@robm.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
streamlit = "^1.40.1"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
